--- a/www/package.json
+++ b/www/package.json
@@ -8,13 +8,16 @@
   },
   "devDependencies": {
     "axios": "^0.15.2",
+    "bootstrap": "^4.0.0-alpha.6",
     "browser-sync": "^2.18.8",
+    "jquery": "^3.2.1",
     "laravel-mix": "^0.10.0",
     "lodash": "^4.16.2",
-    "vue": "^2.0.1"
+    "tether": "^1.4.0",
+    "vue": "^2.0.1",
+    "vue-router": "^2.4.0"
   },
   "dependencies": {
-    "bulma": "^0.3.2",
     "vue-router": "^2.3.0"
   }
 }
