--- a/www/composer.json
+++ b/www/composer.json
@@ -6,15 +6,17 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "guzzlehttp/guzzle": "~6.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "laravelista/ekko": "^1.3",
-        "guzzlehttp/guzzle": "~6.0"
+        "monolog/monolog": "^1.22"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7"
+        "phpunit/phpunit": "~5.7",
+        "itsgoingd/clockwork": "~1.13"
     },
     "autoload": {
         "classmap": [
